[package]
name = "mcp23017"
version = "0.1.1"
description = "A rust driver for the MCP23017 (16-Bit I2C I/O Expander with Serial Interface)"
authors = ["Luca Zulian <lucagiuggia@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucazulian/mcp23017"
edition = "2018"
exclude = [
    ".travis.yml",
    "docs/",
    "docs/*",
]

[dependencies]
embedded-hal = "0.2.3"